--- a/Udemy/myudemylandingpage/index.html
+++ b/Udemy/myudemylandingpage/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Courses - Learn Anything, On Your Schedule | Udemy</title>
   </head>
-  <body class="bg-gray-200">
+  <body >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
